# pixelgame-web

./: .env_example  .envuv  .gitignore  PIXEL_CHARACTER_IMPLEMENTATION_GUIDE.md  README.md  README_NEXTJS.md  analyze_image.py  background_tab.py  character_sprites_tab.py  character_tab.py  check_image.py  config_manager.py  crop_button.py  dead_sprite_tab.py  exclude.txt  game_asset_app.py  game_asset_generator.py  image_resize.py  index.html  item_tab.py  next.config.js  package-lock.json  package.json  pixel_character_generator.py  pixel_character_tab.py  prompt_builder.py  pyproject.toml  settings_tab.py  shared.py  sora2_client.py  sprite_images_tab.py
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/api/characters/: route.ts
app/api/characters/[id]/: route.ts
app/api/config/: route.ts
app/api/download/frames/: route.ts
app/api/generate/background/: route.ts
app/api/generate/character/: route.ts
app/api/generate/dead-animation/: route.ts
app/api/generate/item/: route.ts
app/api/generate/pixel-character/: route.ts
app/api/generate/sprite-animation/: route.ts
app/api/generate/sprites/: route.ts
app/api/images/[...path]/: route.ts
app/generator/: page.tsx
components/tabs/: .GameTab.tsx.swp  BackgroundTab.tsx  BattleTab.tsx  CharacterSpritesTab.tsx  CharacterTab.tsx  DeadSpriteTab.tsx  GameTab.tsx  ItemTab.tsx  PixelCharacterTab.tsx  SettingsTab.tsx  SpriteImagesTab.tsx
data/: characters.json
lib/: character-db.ts  config-manager.ts  game-asset-generator.ts  spriteMeta.ts  supabase.ts  types.ts  utils.ts
(+2 files in other folders)
